# TS-Impute

./: Dockerfile  Makefile  README.md  algorithm_ml_params_choices.json  algorithm_params_choices.json  install_custom_library.sh  main.py  requirements.txt  setup.py
AlgoCollection/: CMakeLists.txt
AlgoCollection/cpp/: CMakeLists.txt
AlgoCollection/cpp/include/Algebra/: RSVD.h
AlgoCollection/cpp/include/Algorithms/: CDMissingValueRecovery.h  GROUSE.h  LinearImpute.h  NMFMissingValueRecovery.h  OGDImpute.h  PCA_MME.h
AlgoCollection/cpp/src/Algebra/: Auxiliary.cpp  CentroidDecomposition.cpp  RSVD.cpp
AlgoCollection/cpp/src/Algorithms/: IterativeSVD.cpp  OGDImpute.cpp  PCA_MME.cpp  ROSL.cpp  SPIRIT.cpp  SVT.cpp  SoftImpute.cpp  TKCM.cpp
AlgoCollection/cpp/src/Stats/: Correlation.cpp
AlgoCollection/python/: algorithms.cpp  algorithms_sampler.cpp
AlgoCollection/python/carma/: carma.h
AlgoCollection/python/carma/carma/: converters.h
utils/stelarImputation/: README.md  install_custom_library.sh  pyproject.toml
utils/stelarImputation/AlgoCollection/: CMakeLists.txt
utils/stelarImputation/AlgoCollection/cpp/: CMakeLists.txt
utils/stelarImputation/AlgoCollection/cpp/include/Algebra/: Auxiliary.h  CentroidDecomposition.h  MissingBlock.hpp  RSVD.h
utils/stelarImputation/AlgoCollection/cpp/include/Algorithms/: CDMissingValueRecovery.h  DynaMMo.h  IterativeSVD.h  MeanImpute.h  OGDImpute.h  PCA_MME.h  ROSL.h  SPIRIT.h  SVT.h  SoftImpute.h  TKCM.h  ZeroImpute.h
utils/stelarImputation/AlgoCollection/cpp/include/Stats/: Correlation.h
utils/stelarImputation/AlgoCollection/cpp/src/Algebra/: Auxiliary.cpp  CentroidDecomposition.cpp  RSVD.cpp
utils/stelarImputation/AlgoCollection/cpp/src/Algorithms/: CDMissingValueRecovery.cpp  DynaMMo.cpp  GROUSE.cpp  LinearImpute.cpp  MeanImpute.cpp  NMFMissingValueRecovery.cpp  OGDImpute.cpp  PCA_MME.cpp  ZeroImpute.cpp
utils/stelarImputation/AlgoCollection/cpp/src/Stats/: Correlation.cpp
utils/stelarImputation/AlgoCollection/python/: algorithms.cpp
utils/stelarImputation/datasets/: example_input_type1.csv  example_input_type1_missing.csv  example_input_type2_missing.csv
utils/stelarImputation/notebooks/: example_input_type1.ipynb  example_input_type2.ipynb
utils/stelarImputation/pilots/UC.B1/experiments/experiment_results/UCB1_lai_field_timeseries/CDMissingValueRecovery/: seed=2023.json  seed=2024.json
utils/stelarImputation/pilots/UC.B1/experiments/experiment_results/UCB1_lai_field_timeseries/Naive/: seed=2023.json  seed=2025.json
utils/stelarImputation/pilots/UC.B1/experiments/experiment_results/UCB1_lai_field_timeseries/Saits/: seed=2023.json  seed=2024.json  seed=2025.json
utils/stelarImputation/pilots/UC.B1/experiments/experiment_results/UCB1_lai_field_timeseries/SoftImpute/: seed=2023.json  seed=2024.json
utils/stelarImputation/pilots/UC.B1/experiments/experiment_results/UCB1_lai_field_timeseries/TimesNet/: seed=2023.json  seed=2025.json
utils/stelarImputation/pilots/UC.B1/experiments/plots/: README.md
utils/stelarImputation/pilots/UC.B1/hypertuning/: README.md  hypertuning.sh  input.json
utils/stelarImputation/pilots/UC.B1/hypertuning/hpo_results/: README.md
utils/stelarImputation/pilots/UC.B1/hypertuning/hpo_results/UCB1_lai_field_timeseries/CDMissingValueRecovery/: trials.json
utils/stelarImputation/pilots/UC.B1/hypertuning/hpo_results/UCB1_lai_field_timeseries/Saits/: trials.json
utils/stelarImputation/pilots/UC.B1/hypertuning/hpo_results/UCB1_lai_field_timeseries/SoftImpute/: trials.json
utils/stelarImputation/pilots/UC.B1/hypertuning/hpo_results/UCB1_lai_field_timeseries/TimesNet/: trials.json
utils/stelarImputation/pilots/UC.B2/: README.md
utils/stelarImputation/pilots/UC.B2/experiments/: hypertuning_results.json
utils/stelarImputation/pilots/UC.B2/experiments/experiment_results/: README.md
utils/stelarImputation/pilots/UC.B2/experiments/experiment_results/33TUN_lai_field_timeseries/CDMissingValueRecovery/: seed=2025.json
utils/stelarImputation/pilots/UC.B2/experiments/experiment_results/33TUN_lai_field_timeseries/Saits/: seed=2023.json
utils/stelarImputation/pilots/UC.B2/experiments/experiment_results/33TUN_lai_field_timeseries/SoftImpute/: seed=2024.json
utils/stelarImputation/pilots/UC.B2/experiments/experiment_results/33TUN_lai_field_timeseries/TimesNet/: seed=2025.json
utils/stelarImputation/pilots/UC.B2/experiments/experiment_results/33UUP_lai_field_timeseries/CDMissingValueRecovery/: seed=2023.json
utils/stelarImputation/pilots/UC.B2/experiments/experiment_results/33UUP_lai_field_timeseries/Naive/: seed=2024.json  seed=2025.json
utils/stelarImputation/pilots/UC.B2/experiments/experiment_results/33UUP_lai_field_timeseries/SoftImpute/: seed=2024.json  seed=2025.json
utils/stelarImputation/pilots/UC.B2/experiments/experiment_results/33UVP_lai_field_timeseries/Naive/: seed=2023.json  seed=2025.json
utils/stelarImputation/pilots/UC.B2/experiments/experiment_results/33UVP_lai_field_timeseries/Saits/: seed=2024.json  seed=2025.json
utils/stelarImputation/pilots/UC.B2/experiments/experiment_results/33UVP_lai_field_timeseries/TimesNet/: seed=2024.json
utils/stelarImputation/pilots/UC.B2/hypertuning/: hypertuning.sh  input.json  optuna_imputation.py  utils.py
utils/stelarImputation/pilots/UC.B2/hypertuning/hpo_results/sample_33TUN_lai_field_timeseries/CDMissingValueRecovery/: trials.json
utils/stelarImputation/pilots/UC.B2/hypertuning/hpo_results/sample_33TUN_lai_field_timeseries/Saits/: trials.json
utils/stelarImputation/pilots/UC.B2/hypertuning/hpo_results/sample_33UUP_lai_field_timeseries/CDMissingValueRecovery/: trials.json
utils/stelarImputation/pilots/UC.C3/: README.md
utils/stelarImputation/pilots/UC.C3/experiments/: README.md  test_imputation.py
utils/stelarImputation/pilots/UC.C3/hypertuning/: README.md  hypertuning.sh  optuna_imputation.py
utils/stelarImputation/stelarImputation/: __init__.py  default.py  hyperparameter_tuning.py  imputation.py
(+1606 files in other folders)
