[project]
name = "stelarImputation"
version = "1.0.0"
description = ""
authors = [
    { name = "Panagiotis Betchavas", email = "pbetchavas@athenarc.gr" }
]
requires-python = ">=3.8, <3.13"
dependencies = [
    "jupyter==1.0.0",
    "xgboost==2.0.3",
    "tqdm==4.64.1",
    "pypots @ git+https://github.com/PanosBet/PyPOTS.git",
    "optuna==4.3.0",
    "scikit-learn==1.3.2"
]

[tool.setuptools.packages.find]
include = ["stelarImputation"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
